tests/typing/good/testfile-type_parameter-2.scala

class A { def m() {} }
class B[T <: A] { def foo(t: T) { t.m() } }
object Main { def main(args: Array[String]) { } }
