tests/typing/bad/testfile-cyclic2-1.scala
class A extends B {}
class B extends A {}
object Main { def main(args: Array[String]) { } }
